# pysembench

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  debug-logconf.yml  debug-logconfig.yml  dotenv-example  entrypoint.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pysembench.html  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  pysembench.doctree
.github/workflows/: build.yml  build_pages.yml  pr_validation.yml
docs/source/: conf.py  index.rst  modules.rst
examples/: sembench.py  sembench_scheduler.py
examples/resources/input_data/: data.csv  data.ttl
examples/resources/sembench_data/: example_shape.ttl  sembench.json  sembench.yaml
examples/resources/sembench_data/templates/: data.ttl.j2
pysembench/: __init__.py  core.py  dispatcher.py  handler.py  task.py
tests/: fail_test.py  first_test_pass.py  pytest.ini  test_core.py  test_dispatcher.py  test_handler.py  util4tests.py
tests/resources/: resolving-sembench.yml  weirdly_named_sembench.json  weirdly_named_sembench.yaml
tests/resources/input_data/: another_weirdly_named_sembench.json  another_weirdly_named_sembench.yaml  example_data_conform.ttl  example_data_nonconform.ttl  sembench.json  sembench.yaml
tests/resources/sembench_data/: sembench.json  sembench.yaml
