[tool.poetry]
name = "pysembench"
version = "0.1.0"
description = ""
authors = ["bulricht <108867473+bulricht@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysubyt = {git = "https://github.com/vliz-be-opsci/pysubyt.git", rev = "4e2b92f2d9937724bc6827e03604e900f5fad7c2"}
pyshacl = "^0.22.0"
apscheduler = "^3.10.4"
pysyncfstriples = {git = "https://github.com/vliz-be-opsci/py-sync-fs-triples.git", rev = "chore/unit_testing_services"}
pytravharv = {git = "https://github.com/vliz-be-opsci/py-trav-harv.git", rev = "test/dependencies"}
pyyaml = "^6.0.1"

# Development tools
pre-commit = {version = "^3.3.1", optional = true}
isort = {version = "^5.12.0", optional = true}
black = {version = "^23.3.0", optional = true}
flake8 = {version = "^6.0.0", optional = true}

# Testing tools
pytest = {version = "^7.3.1", optional = true}
coverage = {version = "^7.2.5", optional = true}
python-dotenv = {version = "^1.0.0", optional = true}
pytest-cov = {version = "^4.1.0", optional = true}

# Documentation tools
sphinx = {version = "^7.0.1", optional = true}

# Poetry has the dependecies groups, but those are not 
#   compatible with extras, widely used in the python-verse.
[tool.poetry.extras]
dev = ["pre-commit", "isort", "black", "flake8"]
tests = ["pytest", "coverage", "python-dotenv", "pytest-cov"]
docs = ["sphinx"]

[build-system]
requires = ["setuptools","poetry"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
